tests/machine/x/hs/for_loop.error

/workspace/mochi/tests/machine/x/hs/for_loop.hs:47:18: error:
    Variable not in scope: fromMaybe :: [a1] -> Maybe [a] -> [a]
   |
47 |    in [MGroup k (fromMaybe [] (Map.lookup k m)) | k <- order]
   |                  ^^^^^^^^^
